<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="48dp"
        tools:ignore="MissingConstraints">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/appName"
                android:textColor="#2196F3"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:layout_marginStart="16dp"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                android:importantForAutofill="no"
                app:layout_constraintTop_toTopOf="@+id/scrollView2" />

            <TextView
                android:id="@+id/qst1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/questionOne"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                >

                <RadioButton
                    android:id="@+id/qstOneA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6_points" />

                <RadioButton
                    android:id="@+id/qstOneB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_points" />

                <RadioButton
                    android:id="@+id/qstOneC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_points" />
            </RadioGroup>

            <TextView
                android:id="@+id/qst2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/questionTwo" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <CheckBox
                    android:id="@+id/qstTwoA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb" />

                <CheckBox
                    android:id="@+id/qstTwoB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qb" />

                <CheckBox
                    android:id="@+id/qstTwoC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hb" />
            </LinearLayout>
            <TextView
                android:id="@+id/qst3_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionThree"
                android:layout_margin="16dp"
                />

            <EditText
                android:id="@+id/qstThreeAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/type_in_your_answer_here"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/qst4_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFour"
                android:layout_margin="16dp"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                >

                <RadioButton
                    android:id="@+id/qstFourA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_points" />

                <RadioButton
                    android:id="@+id/qstFourB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_points" />

                <RadioButton
                    android:id="@+id/qstFourC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_points" />
            </RadioGroup>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="displayAnswer"
                android:text="@string/submit"
                />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>